--- a/css/addons/unraid/login-page/retro-terminal/white.css
+++ b/css/addons/unraid/login-page/retro-terminal/white.css
@@ -10,7 +10,7 @@
 --body-before:#70d7f61a;
 --body-after: #70d7f633;
 --body-animation: flicker;
---logo: url(/css/addons/unraid/login-page/alien/logo/Jarvis_AMH_Labs_Logo_1.png) center no-repeat;
+--logo: url(https://imgur.com/RtZlPFr.png) center no-repeat;
 --text-color: #ffffff;
 --input-color: #ffffff;
 --link-color: #ffffff;
